force-app/main/default/objects/LeadAttributeCombo__c/LeadAttributeCombo__c.object-meta.xml
<CustomObject>
    <description>BI tool to define valid Lead Attribute Combos and provide a simple key to outside sources</description>
    <label>Lead Attribute Combo</label>
    <nameField>
        <label>LAC ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Attribute Combos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>