force-app/main/default/objects/LeadAttributeCombo__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <formula>TEXT(LeadSource__c)  &amp; &quot;/&quot; &amp;  TEXT(LeadMedium__c)  &amp; &quot;/&quot; &amp;  TEXT(LeadChannel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Details</label>
    <type>Text</type>
</CustomField>