force-app/main/default/objects/LeadAttributeCombo__c/fields/Email_Opt_Out_Default__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stakeholder: MKT https://jira.orderbird.com/browse/CDS-930</description>
    <inlineHelpText>Should a new lead with this LAC be set to Email Opt Out?</inlineHelpText>
    <label>Email Opt Out Default</label>
    <type>Checkbox</type>
</CustomField>