force-app/main/default/objects/LeadAttributeCombo__c/fields/LeadChannel__c.field-meta.xml
<CustomField>
    <fullName>LeadChannel__c</fullName>
    <label>Lead Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>As Medium</fullName>
            </value>
            <value>
                <fullName>Companeo</fullName>
            </value>
            <value>
                <fullName>Dolead</fullName>
            </value>
            <value>
                <fullName>Facebook Scraper</fullName>
            </value>
            <value>
                <fullName>Kassensystemevergleich.de</fullName>
            </value>
            <value>
                <fullName>Kassen-Vergleich.com</fullName>
            </value>
            <value>
                <fullName>METRO - Dish</fullName>
            </value>
            <value>
                <fullName>METRO - HD Landingpage</fullName>
            </value>
            <value>
                <fullName>Neugeschaeft</fullName>
            </value>
            <value>
                <fullName>Postcard 2020</fullName>
            </value>
            <value>
                <fullName>Print Campaign</fullName>
            </value>
            <value>
                <fullName>Roadshow</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Trade Register Scraper</fullName>
            </value>
            <value>
                <fullName>TradingTwins</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>