force-app/main/default/objects/LeadAttributeCombo__c/fields/LeadMedium__c.field-meta.xml
<CustomField>
    <fullName>LeadMedium__c</fullName>
    <label>Lead Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Campaign Landing Page</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Coca Cola Hellenic</fullName>
            </value>
            <value>
                <fullName>CRC Form</fullName>
            </value>
            <value>
                <fullName>DEHOGA Berlin</fullName>
            </value>
            <value>
                <fullName>Distribution Partner</fullName>
            </value>
            <value>
                <fullName>Ebook Business Plan</fullName>
            </value>
            <value>
                <fullName>Ebook Digitalförderung</fullName>
            </value>
            <value>
                <fullName>Ebook Kassensicherungsverordnung</fullName>
            </value>
            <value>
                <fullName>Ebook Marketing</fullName>
            </value>
            <value>
                <fullName>Ebook New Opening</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>ETL</fullName>
            </value>
            <value>
                <fullName>facebook lead form</fullName>
            </value>
            <value>
                <fullName>File Upload</fullName>
            </value>
            <value>
                <fullName>Founder Award DGGP</fullName>
            </value>
            <value>
                <fullName>Hotline</fullName>
            </value>
            <value>
                <fullName>LinkedIn Lead Form</fullName>
            </value>
            <value>
                <fullName>METRO</fullName>
            </value>
            <value>
                <fullName>myob</fullName>
            </value>
            <value>
                <fullName>OB-Mini</fullName>
            </value>
            <value>
                <fullName>ob website</fullName>
            </value>
            <value>
                <fullName>Pepperbill</fullName>
            </value>
            <value>
                <fullName>Personal Network</fullName>
            </value>
            <value>
                <fullName>Postal Service</fullName>
            </value>
            <value>
                <fullName>Private Referral</fullName>
            </value>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Referral of successor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>