force-app/main/default/objects/LeadAttributeCombo__c/fields/Marketing_Opt_in_implied__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_in_implied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-1313</description>
    <label>Marketing Opt-in implied</label>
    <type>Checkbox</type>
</CustomField>