force-app/main/default/objects/LeadAttributeCombo__c/fields/Shorthand__c.field-meta.xml
<CustomField>
    <fullName>Shorthand__c</fullName>
    <description>Stakeholder: Sales https://jira.orderbird.com/browse/CDS-138</description>
    <inlineHelpText>What is a User friendly shorthand for this LAC? Only required for manually set LAC</inlineHelpText>
    <label>Shorthand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LAC_Shorthands</valueSetName>
    </valueSet>
</CustomField>