force-app/main/default/objects/LeadAttributeCombo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Shorthand__c</columns>
    <columns>Group__c</columns>
    <columns>LeadSource__c</columns>
    <columns>LeadMedium__c</columns>
    <columns>LeadChannel__c</columns>
    <columns>Marketing_Opt_in_implied__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>